# ensys-gui-new

./: .dockerignore  .env  .gitignore  404.html  CHANGELOG.md  CODEOWNERS  GUIDELINES.md  README.md  angular.json  docker-compose.dev.arm64.yaml  docker-compose.dev.yaml  docker-compose.local.yaml  docker-compose.prod-test.yaml  docker-compose.prod.test.yaml  docker-compose.prod.yaml  es.json  es_schema.json  index.html  mkdocs.yaml  objects.inv  package-lock.json  package.json  sitemap.xml  start.sh  stop.sh
.run/: Angular CLI Server.run.xml  Celery.run.xml  Development.run.xml  Docker Dev.run.xml  Generate Version Footprint.run.xml  Local.run.xml  Migrate Database (Development).run.xml  Migrate Database (Testing).run.xml  Migrate Database.run.xml  Migrate Databases.run.xml  Production Test.run.xml  Production.run.xml  Run Backend (psql).run.xml  Run Backend (sqlite).run.xml  Run Backend.run.xml  Run Project.run.xml  Server Dev.run.xml  Server Prod.run.xml  Start Server Emulation.run.xml  Upgrade Head.run.xml  compose.dev.amd64.run.xml  compose.dev.arm64.run.xml  compose.dev.run.xml  pytest in backend_tests.run.xml  pytest in ensys_tests.run.xml
about/: index.html
backend/: .dockerignore  __init__.py  alembic.ini  alembic.testing.ini  dockerfile  env.py  index.html  main.py  (+1 more)
backend/wrapper/: dockerfile  main.py  pyproject.toml  requirements.txt
backend/wrapper/src/ensys/common/: basemodel.py  modelbuilder.py
backend/wrapper/src/ensys/components/: bus.py  constraints.py  converter.py  energysystem.py  flow.py  genericstorage.py  investment.py  model.py
(+788 files in other folders)
